@@ -50,7 +50,14 @@ public class TestFloat16VectorOperations {
     private static final int LEN = 2048;
 
     public static void main(String args[]) {
+        // Test with default MaxVectorSize
         TestFramework.runWithFlags("--add-modules=jdk.incubator.vector");
+
+        // Test with different values of MaxVectorSize
+        TestFramework.runWithFlags("--add-modules=jdk.incubator.vector", "-XX:MaxVectorSize=8");
+        TestFramework.runWithFlags("--add-modules=jdk.incubator.vector", "-XX:MaxVectorSize=16");
+        TestFramework.runWithFlags("--add-modules=jdk.incubator.vector", "-XX:MaxVectorSize=32");
+        TestFramework.runWithFlags("--add-modules=jdk.incubator.vector", "-XX:MaxVectorSize=64");
     }
 
     public static boolean assertResults(short expected, short actual) {
@@ -76,9 +83,11 @@ public class TestFloat16VectorOperations {
     }
 
     @Test
-    @Warmup(10000)
+    @Warmup(50)
     @IR(counts = {IRNode.ADD_VHF, ">= 1"},
-        applyIfCPUFeature = {"avx512_fp16", "true"})
+        applyIfCPUFeatureOr = {"avx512_fp16", "true", "zvfh", "true", "sve", "true"})
+    @IR(counts = {IRNode.ADD_VHF, ">= 1"},
+        applyIfCPUFeatureAnd = {"fphp", "true", "asimdhp", "true"})
     public void vectorAddFloat16() {
         for (int i = 0; i < LEN; ++i) {
             output[i] = float16ToRawShortBits(add(shortBitsToFloat16(input1[i]), shortBitsToFloat16(input2[i])));
@@ -97,9 +106,11 @@ public class TestFloat16VectorOperations {
     }
 
     @Test
-    @Warmup(10000)
+    @Warmup(50)
     @IR(counts = {IRNode.SUB_VHF, ">= 1"},
-        applyIfCPUFeature = {"avx512_fp16", "true"})
+        applyIfCPUFeatureOr = {"avx512_fp16", "true", "zvfh", "true", "sve", "true"})
+    @IR(counts = {IRNode.SUB_VHF, ">= 1"},
+        applyIfCPUFeatureAnd = {"fphp", "true", "asimdhp", "true"})
     public void vectorSubFloat16() {
         for (int i = 0; i < LEN; ++i) {
             output[i] = float16ToRawShortBits(subtract(shortBitsToFloat16(input1[i]), shortBitsToFloat16(input2[i])));
@@ -118,9 +129,11 @@ public class TestFloat16VectorOperations {
     }
 
     @Test
-    @Warmup(10000)
+    @Warmup(50)
     @IR(counts = {IRNode.MUL_VHF, ">= 1"},
-        applyIfCPUFeature = {"avx512_fp16", "true"})
+        applyIfCPUFeatureOr = {"avx512_fp16", "true", "zvfh", "true", "sve", "true"})
+    @IR(counts = {IRNode.MUL_VHF, ">= 1"},
+        applyIfCPUFeatureAnd = {"fphp", "true", "asimdhp", "true"})
     public void vectorMulFloat16() {
         for (int i = 0; i < LEN; ++i) {
             output[i] = float16ToRawShortBits(multiply(shortBitsToFloat16(input1[i]), shortBitsToFloat16(input2[i])));
@@ -139,9 +152,11 @@ public class TestFloat16VectorOperations {
     }
 
     @Test
-    @Warmup(10000)
+    @Warmup(50)
     @IR(counts = {IRNode.DIV_VHF, ">= 1"},
-        applyIfCPUFeature = {"avx512_fp16", "true"})
+        applyIfCPUFeatureOr = {"avx512_fp16", "true", "zvfh", "true", "sve", "true"})
+    @IR(counts = {IRNode.DIV_VHF, ">= 1"},
+        applyIfCPUFeatureAnd = {"fphp", "true", "asimdhp", "true"})
     public void vectorDivFloat16() {
         for (int i = 0; i < LEN; ++i) {
             output[i] = float16ToRawShortBits(divide(shortBitsToFloat16(input1[i]), shortBitsToFloat16(input2[i])));
@@ -160,9 +175,11 @@ public class TestFloat16VectorOperations {
     }
 
     @Test
-    @Warmup(10000)
+    @Warmup(50)
     @IR(counts = {IRNode.MIN_VHF, ">= 1"},
-        applyIfCPUFeature = {"avx512_fp16", "true"})
+        applyIfCPUFeatureOr = {"avx512_fp16", "true", "zvfh", "true", "sve", "true"})
+    @IR(counts = {IRNode.MIN_VHF, ">= 1"},
+        applyIfCPUFeatureAnd = {"fphp", "true", "asimdhp", "true"})
     public void vectorMinFloat16() {
         for (int i = 0; i < LEN; ++i) {
             output[i] = float16ToRawShortBits(min(shortBitsToFloat16(input1[i]), shortBitsToFloat16(input2[i])));
@@ -181,9 +198,11 @@ public class TestFloat16VectorOperations {
     }
 
     @Test
-    @Warmup(10000)
+    @Warmup(50)
     @IR(counts = {IRNode.MAX_VHF, ">= 1"},
-        applyIfCPUFeature = {"avx512_fp16", "true"})
+        applyIfCPUFeatureOr = {"avx512_fp16", "true", "zvfh", "true", "sve", "true"})
+    @IR(counts = {IRNode.MAX_VHF, ">= 1"},
+        applyIfCPUFeatureAnd = {"fphp", "true", "asimdhp", "true"})
     public void vectorMaxFloat16() {
         for (int i = 0; i < LEN; ++i) {
             output[i] = float16ToRawShortBits(max(shortBitsToFloat16(input1[i]), shortBitsToFloat16(input2[i])));
@@ -202,9 +221,11 @@ public class TestFloat16VectorOperations {
     }
 
     @Test
-    @Warmup(10000)
+    @Warmup(50)
     @IR(counts = {IRNode.SQRT_VHF, ">= 1"},
-        applyIfCPUFeature = {"avx512_fp16", "true"})
+        applyIfCPUFeatureOr = {"avx512_fp16", "true", "zvfh", "true", "sve", "true"})
+    @IR(counts = {IRNode.SQRT_VHF, ">= 1"},
+        applyIfCPUFeatureAnd = {"fphp", "true", "asimdhp", "true"})
     public void vectorSqrtFloat16() {
         for (int i = 0; i < LEN; ++i) {
             output[i] = float16ToRawShortBits(sqrt(shortBitsToFloat16(input1[i])));
@@ -223,9 +244,11 @@ public class TestFloat16VectorOperations {
     }
 
     @Test
-    @Warmup(10000)
+    @Warmup(50)
     @IR(counts = {IRNode.FMA_VHF, ">= 1"},
-        applyIfCPUFeature = {"avx512_fp16", "true"})
+        applyIfCPUFeatureOr = {"avx512_fp16", "true", "zvfh", "true", "sve", "true"})
+    @IR(counts = {IRNode.FMA_VHF, ">= 1"},
+        applyIfCPUFeatureAnd = {"fphp", "true", "asimdhp", "true"})
     public void vectorFmaFloat16() {
         for (int i = 0; i < LEN; ++i) {
             output[i] = float16ToRawShortBits(fma(shortBitsToFloat16(input1[i]), shortBitsToFloat16(input2[i]),
@@ -246,9 +269,11 @@ public class TestFloat16VectorOperations {
     }
 
     @Test
-    @Warmup(10000)
+    @Warmup(50)
     @IR(counts = {IRNode.FMA_VHF, " >= 1"},
-        applyIfCPUFeature = {"avx512_fp16", "true"})
+        applyIfCPUFeatureOr = {"avx512_fp16", "true", "zvfh", "true", "sve", "true"})
+    @IR(counts = {IRNode.FMA_VHF, ">= 1"},
+        applyIfCPUFeatureAnd = {"fphp", "true", "asimdhp", "true"})
     public void vectorFmaFloat16ScalarMixedConstants() {
         for (int i = 0; i < LEN; ++i) {
             output[i] = float16ToRawShortBits(fma(shortBitsToFloat16(input1[i]), shortBitsToFloat16(SCALAR_FP16),
@@ -270,9 +295,11 @@ public class TestFloat16VectorOperations {
 
 
     @Test
-    @Warmup(10000)
+    @Warmup(50)
     @IR(counts = {IRNode.FMA_VHF, " >= 1"},
-        applyIfCPUFeature = {"avx512_fp16", "true"})
+        applyIfCPUFeatureOr = {"avx512_fp16", "true", "zvfh", "true", "sve", "true"})
+    @IR(counts = {IRNode.FMA_VHF, ">= 1"},
+        applyIfCPUFeatureAnd = {"fphp", "true", "asimdhp", "true"})
     public void vectorFmaFloat16MixedConstants() {
         short input3 = floatToFloat16(3.0f);
         for (int i = 0; i < LEN; ++i) {
@@ -293,9 +320,11 @@ public class TestFloat16VectorOperations {
     }
 
     @Test
-    @Warmup(10000)
+    @Warmup(50)
     @IR(counts = {IRNode.FMA_VHF, " 0 "},
-        applyIfCPUFeature = {"avx512_fp16", "true"})
+        applyIfCPUFeatureOr = {"avx512_fp16", "true", "zvfh", "true", "sve", "true"})
+    @IR(counts = {IRNode.FMA_VHF, " 0 "},
+        applyIfCPUFeatureAnd = {"fphp", "true", "asimdhp", "true"})
     public void vectorFmaFloat16AllConstants() {
         short input1 = floatToFloat16(1.0f);
         short input2 = floatToFloat16(2.0f);
